# GNNInterpreter

./: .gitignore  LICENSE  README.md  environment.yml  model_explanation_cyclicity.ipynb  model_explanation_motif.ipynb  model_explanation_mutag.ipynb  model_explanation_shape.ipynb  model_training.ipynb  mutag_gnn_64x3.pt  pyproject.toml  requirements.txt  xai_cyclicity.ipynb  xai_motif.ipynb
ckpts/: cyclicity.pt  cyclicity_nnconv.pt  motif.pt  motif_gcn_64x3.pt  shape.pt  shape_simple_gcn.pt
gnninterpreter/: __init__.py  graph_sampler.py  trainer.py
gnninterpreter/criteria/: __init__.py  class_score_criterion.py  cross_entropy_boundary_criterion.py  dynamic_balancing_boundary_criterion.py  dynamic_balancing_criterion.py  embedding_criterion.py  mean_abs_boundary_criterion.py  mean_square_boundary_criterion.py  perplexity_criterion.py  weight_criterion.py
gnninterpreter/datasets/: __init__.py  base_graph_dataset.py  color_dataset.py  cyclicity_dataset.py  motif_dataset.py  mutag_dataset.py  rome_dataset.py  shape_dataset.py  utils.py
gnninterpreter/models/: __init__.py  gcn_classifier.py  gnn_classifier.py  nnconv_classifier.py  original_max_pool_simple_gcn_classifier.py  original_simple_gcn_classifier.py  simple_gcn_classifier.py
gnninterpreter/models/nn/: functional.py  gat_v2_conv.py  graph_norm_weighted.py  nnconv.py
gnninterpreter/regularizations/: __init__.py  base_regularization.py  budget_penalty.py  cross_entropy_penalty.py  entropy_penalty.py  kl_divergence_penalty.py  mean_penalty.py  norm_penalty.py
gnninterpreter/utils/: __init__.py
